--- a/AccountShare/App.config
+++ b/AccountShare/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AccountShare.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <applicationSettings>
+        <AccountShare.Properties.Settings>
+            <setting name="AccountShare_WebReference_SforceService" serializeAs="String">
+                <value>https://test.salesforce.com/services/Soap/c/35.0/0DF1b000000CaV9</value>
+            </setting>
+        </AccountShare.Properties.Settings>
+    </applicationSettings>
 </configuration>
