--- a/AccountShare/Properties/Settings.settings
+++ b/AccountShare/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="AccountShare.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="AccountShare_WebReference_SforceService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://test.salesforce.com/services/Soap/c/35.0/0DF1b000000CaV9</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
